--- a/public/home.css
+++ b/public/home.css
@@ -13,6 +13,8 @@ html {
   position: relative;
   margin: 10rem auto;
   text-align: center;
+  font-family: 'Oswald', sans-serif;
+  color: #d8dcdc;
 }
 
 h1 {
