--- a/css/home.css
+++ b/css/home.css
@@ -36,6 +36,10 @@ h1 {
   margin-bottom: 16px;
 }
 
+.hidden {
+  display: none;
+}
+
 .focus-button {
   font-size: 25px;
   border: 7px double #949494;
